@@ -75,7 +75,7 @@ class Account < ActiveRecord::Base
   def location
     return "" unless self[:billing_address]
     location = self[:billing_address].strip.split("\n").last
-    location.gsub(/(^|\s+)\d+(:?\s+|$)/, " ") if location
+    location.gsub(/(^|\s+)\d+(:?\s+|$)/, " ").strip if location
   end
 
   # Class methods.
