@@ -4,6 +4,11 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Wed, Oct 14, 2009
+---------------------------------------------------------------------
+- Make sure opportunity name does not exceed 64 characters (thanks, Rit!)
+- Changed required Rails version to v2.3.4
+
 Sun, Oct 11, 2009
 ---------------------------------------------------------------------
 - Added full support for deploying Fat Free CRM in subdirectory (see config/settings.yml).
